# my-website-backend

./: .env  .flake8  .gitignore  exercise.py  poetry.toml  pyproject.toml  readingwriting.py
crawler/: compare.py  crawler.py  doubanmovie.py  learn.http  parseHTML.py  seleniumusage.py  seleniumusage1.py  syncandasync.py  threadandprocess.py
crawler/selenium/: weibo_topic.py
migrations/versions/: 906a3071b77f_add_token_model.py  b4d4639b8a3b_change_password_hash_string_length.py  d6dae310ec35_initial_migration.py
my_website_kevin/: app.py  wsgi.py
my_website_kevin/apis/: __init__.py
my_website_kevin/apis/login/: models.py  schemas.py  services.py  views.py
my_website_kevin/config/: __init__.py
my_website_kevin/utils/: __init__.py
python-practice/: advancedpython.py  clientapp.py  datastructuresandalgorithms.py  dealexcelword.py  demo.docx  function.py  logging_info.py  mixinandmetaclass.py  networkapp.py  processandthread.py  processandthread1.py  readingwriting.py  sample.xlsx  udpserver.py  updclient.py
scrapy_tech/crawler_web_topic/: scrapy.cfg  微博话题列表-2024-07-03 17:54:40.xlsx  微博话题列表-2024-07-03 17:57:38.xlsx
scrapy_tech/crawler_web_topic/crawler_web_topic/: items.py  middlewares.py  pipelines.py  settings.py
scrapy_tech/crawler_web_topic/crawler_web_topic/spiders/: webo_topic.py
scrapy_tech/learn_scrapy/: 豆瓣电影数据.xlsx
scrapy_tech/learn_scrapy/learn_scrapy/: items.py  pipelines.py  settings.py
scrapy_tech/learn_scrapy/learn_scrapy/spiders/: douban.py
